--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.2.6",
     "formik": "^2.2.9",
     "prop-types": "^15.8.1",
+    "qs": "^6.11.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-icons": "^4.7.1",
