--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-icons": "^4.7.1",
+    "react-netlify-forms": "^1.3.3",
+    "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
+    "reaptcha": "^1.12.1",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
