--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-icons": "^4.7.1",
+    "react-loader-spinner": "^5.3.4",
     "react-netlify-forms": "^1.3.3",
     "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.1",
